# hippo

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  test.sh
src/hippo/: archive.py  backup.py  cli.py  clusters.py  config.py  diffs.py  directories.py  graph_builder.py  models.py  node_markdown.py  storage.py  topic_markdown.py
src/hippo/backup/: __init__.py  backup.py  restore.py
src/hippo/cli/: __init__.py  backup.py  graph.py  sources.py  sync.py  topics.py  utils.py
src/hippo/cli/ingest/: __init__.py  chatgpt.py
src/hippo/graph/: __init__.py  builder.py  cluster.py  validation.py
src/hippo/parsers/: chatgpt.py
src/hippo/parsers/chatgpt/: __init__.py  extract.py  format.py  load.py  lookups.py  models.py  transform.py  traverse.py  utils.py
src/hippo/sources/: __init__.py  archive.py
src/hippo/topics/: __init__.py  frontmatter.py  topic.py
tests/: test_chatgpt.py  test_cli.sh  test_diffs.py  test_validation.py
