[project]
name = "hippo"
version = "0.1.0"
description = "Local-first knowledge graph system for agent-driven research"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
]

[project.scripts]
hippo = "hippo.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"

[tool.pyright]
pythonVersion = "3.11"
