[project]
name = "hippo"
version = "0.1.0"
description = "Hippo is a tool for your AI agent to visualize, update and expand your personal knowledge locally on your device."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
hippo = "hippo.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"

[tool.pyright]
pythonVersion = "3.11"
